Fixed main menu items alignment

--- a/docroot/sites/all/themes/chm_theme_kit/css/style.css
+++ b/docroot/sites/all/themes/chm_theme_kit/css/style.css
@@ -8523,7 +8523,7 @@ html body.admin-menu-with-shortcuts {
 .navbar-container #navbar {
   background: none;
   border: none;
-  min-height: 40px;
+  min-height: 30px;
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -8562,7 +8562,7 @@ html body.admin-menu-with-shortcuts {
   }
 }
 .navbar-container #navbar .navbar-collapse .nav li {
-  display: inline-block;
+  float: left;
 }
 .navbar-container #navbar .navbar-collapse .nav li.active {
   background-color: #ffffff;
