--- a/docroot/sites/all/themes/chm_theme_kit/less/header.less
+++ b/docroot/sites/all/themes/chm_theme_kit/less/header.less
@@ -70,7 +70,7 @@
   #navbar {
     background: none;
     border: none;
-    min-height: 40px;
+    min-height: 30px;
     margin-top: 0;
     margin-bottom: 0;
     @media all and (min-width: @screen-sm-min) {
@@ -103,7 +103,7 @@
       }
       .nav {
         li {
-          display: inline-block;
+          float: left;
           &.active {
             background-color: #ffffff;
             a {
